--- a/lab1.html
+++ b/lab1.html
@@ -40,5 +40,8 @@
     <p>Your name: <input type='text' name = 'Name' placeholder = 'Enter your name'></p>
     <p>Your phone: <input type='text' name='Phone' placeholder="Enter Phone"></p>
     <p><button type='submit'>Submit</button></p>
+<footer>
+      <p>&copy; Ivan Maksymov</p>    
+</footer>
 </body>
 </html>
