--- a/lab2.html
+++ b/lab2.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 <div class="one">
-    <h1>Taras Shevchenko</h1>>
+    <h1>Taras Shevchenko</h1>
     <table align="right">
-        <th><a href="#home"> Home</a></th>>
-        <th><a href="#about"> About</a>></th>>
-        <th><a href="#con"> Order</a>></th>>
+        <th><a href="#home"> Home</a></th>
+        <th><a href="#about"> About</a></th>
+        <th><a href="#con"> Order</a></th>
     </table>
     <br>
     <br>
